--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./dist/index.js", 
+    "start": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
+    "ts-node": "^10.9.2",
     "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
