--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.2",
+    "shortid": "^2.2.16",
     "ts-node": "^10.9.2",
     "valid-url": "^1.0.9"
   },
