--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "joi": "^17.13.3",
     "mongoose": "^8.5.2",
     "shortid": "^2.2.16",
-    "ts-node": "^10.9.2",
-    "valid-url": "^1.0.9"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/shortid": "^0.0.32",
-    "@types/valid-url": "^1.0.7"
+    "@types/shortid": "^0.0.32"
   }
 }
